@@ -1,3 +1,6 @@
+Thu Jan 27 10:48:55 CET 2011
+	Removing bogus assertion in basic authentication code (#1651). -CG/timn
+
 Tue Jan 25 14:10:45 CET 2011
 	Releasing libmicrohttpd 0.9.6. -CG
 
